# create-fastapi-app

./: .gitignore  404.html  LICENSE  MANIFEST.in  Pipfile  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: pypi_publish.yml
docs/: index.md  installation.md  models.md
docs/tutorial/: add_model.md  app_structure.md  create_app.md  deployment.md  introduction.md
fastapi-app/: .env  README.md
fastapi-app/app/: utils.py
fastapi-app/app/api/: deps.py
fastapi-app/app/api/v1/: __init__.py
fastapi-app/app/crud/: base.py
fastapi-app/app/database/: initialize.py
fastapi-app/app/schemas/: __init__.py
installation/: index.html
search/: search_index.json
src/cfa/: __init__.py  apply_template_option.py
src/cfa/data/: README.md
src/cfa/fastapi-app/: .gitignore  Dockerfile  Pipfile  README.md  create_git_hooks.sh  docker-compose.yml  init_db.sh  main.py
src/cfa/fastapi-app/app/core/: config.py
src/cfa/fastapi-app/app/crud/: crud_item.py  crud_user.py
src/cfa/fastapi-app/app/database/: initialize.py  session.py
src/cfa/fastapi-app/app/models/: item.py  user.py
src/cfa/fastapi-app/app/schemas/: __init__.py  item.py  user.py
src/cfa/fastapi-app/app/tests/: conftest.py
src/cfa/fastapi-app/git_hooks/: pre-commit.sh  pre-push.sh
src/cfa/options/auth/: app-api-v1-endpoints-auth.py
src/cfa/options/auth/backend/: app-api-deps.py  app-api-v1-__init__.py  (+3 more)
tutorial/add_model/: index.html
tutorial/app_structure/: index.html
tutorial/create_app/: index.html
tutorial/deployment/: index.html
tutorial/introduction/: index.html
(+11 files in other folders)
